--- a/index.html
+++ b/index.html
@@ -635,25 +635,29 @@
     <footer
       class="footer p-10 bg-[#131318] mt-24 grid grid-cols-1 lg:grid-cols-3"
     >
-      <div class="space-y-5">
+    <!-- contact container -->
+     <div class="flex justify-center items-center w-full ">
+      <div class="space-y-5 text-center  lg:text-left">
         <h3 class="text-white font-extrabold text-3xl">Get In Touch</h3>
         <p class="text-[#FFFFFF99]">
           Dit amet consectetur. <br />Condimentum adipiscing aliquam turpis
           placerat dolor. <br />Purus urna in sit nullam proin.
         </p>
-        <div class="">
-          <div class="flex items-center gap-2">
+    
+          <div class="flex items-center justify-center lg:justify-start gap-2 w-full  ">
             <i class="fa-regular fa-envelope text-red-400"></i>
             <p class="text-[#FFFFFF99]">hockeys@support.com</p>
           </div>
-          <div class="flex items-center gap-2">
+          <div class="flex items-center justify-center lg:justify-start gap-2 w-full">
             <i class="fa-solid fa-phone text-red-400"></i>
             <p class="text-[#FFFFFF99]">(+62) 123-321-543</p>
           </div>
-        </div>
       </div>
+
+
+     </div>
       <div class="flex w-full justify-between">
-        <nav class="text-white">
+        <nav class="text-white lg:text-left text-center">
           <header class="font-extrabold text-2xl mb-7">Company</header>
           <div class="text-[#FFFFFF99] flex flex-col space-y-2">
             <a class="link link-hover">About us</a>
@@ -663,7 +667,7 @@
             <a class="link link-hover">Legal Notice</a>
           </div>
         </nav>
-        <nav class="text-white">
+        <nav class="text-white  lg:text-left text-center">
           <header class="font-extrabold text-2xl text-center mb-7">
             Support
           </header>
@@ -680,7 +684,7 @@
           <header class="text-white font-extrabold text-2xl w-full mb-7">
             Services
           </header>
-          <div class="text-[#FFFFFF99] flex flex-col space-y-2 w-full">
+          <div class="text-[#FFFFFF99] flex flex-col space-y-2 w-full  lg:text-left text-center">
             <a class="link link-hover">Academy</a>
             <a class="link link-hover">Group Lesson</a>
             <a class="link link-hover">Private Lesson</a>
