--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
             Meet all the heroes from the field
           </h2>
           <p class="text-base text-[#ffffff99]">
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin.
+            In the vast tapestry of human endeavors, there exists a realm where heroes emerge not from the pages of comic books or the screens of blockbuster movies, but from the very fabric of our daily lives—the field
           </p>
         </div>
       </div>
@@ -148,9 +147,7 @@
         >
           <h6 class="font-extrabold text-4xl">Program Sections</h6>
           <p class="text-[#13131899] px-9">
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat <br />
-            dolor. Purus urna in sit nullam proin.
+            These unsung champions, with sleeves rolled up and hearts ablaze, navigate the challenges that define their chosen domains. <br> "Meet All the Heroes from the Field" invites you on a journey to discover the remarkable individuals who toil, innovate, and inspire within diverse fields of expertise.
           </p>
         </div>
         <div class="flex flex-col lg:flex-row">
@@ -223,9 +220,7 @@
         >
           <h6 class="font-extrabold text-4xl">Program Sections</h6>
           <p class="text-[#13131899] px-9">
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat <br />
-            dolor. Purus urna in sit nullam proin.
+            These unsung champions, with sleeves rolled up and hearts ablaze, navigate the challenges that define their chosen domains. <br> "Meet All the Heroes from the Field" invites you on a journey to discover the remarkable individuals who toil, innovate, and inspire within diverse fields of expertise.
           </p>
         </div>
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-12">
@@ -238,9 +233,7 @@
               <div class="lg:max-w-xl mx-w-md mt-24 ml-5 mb-5 mr-9 text-left">
                 <h1 class="mb-5 text-3xl font-bold">Junior Program</h1>
                 <p class="mb-5">
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna. Id et sed euismod natoque
-                  amet nunc morbi nulla. Tortor congue sed et in.
+                  From the agriculturists cultivating the sustenance of nations to the educators shaping young minds with wisdom and care, <br> each hero carries a unique narrative of resilience, passion, and commitment. Explore the landscapes of science.
                 </p>
                 <button class="btn btn-primary border-0 bg-[#FF4240]">
                   Register Now!
@@ -257,9 +250,7 @@
               <div class="lg:max-w-xl mx-w-md mt-24 ml-5 mb-5 mr-9 text-left">
                 <h1 class="mb-5 text-3xl font-bold">Master Program</h1>
                 <p class="mb-5">
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna. Id et sed euismod natoque
-                  amet nunc morbi nulla. Tortor congue sed et in.
+                  From the agriculturists cultivating the sustenance of nations to the educators shaping young minds with wisdom and care, <br> each hero carries a unique narrative of resilience, passion, and commitment. Explore the landscapes of science.
                 </p>
                 <button class="btn btn-primary border-0 bg-[#FF4240]">
                   Register Now!
@@ -279,9 +270,7 @@
               >
                 <h1 class="mb-5 text-3xl font-bold">Professional Program</h1>
                 <p class="mb-5">
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna. Id et sed euismod natoque
-                  amet nunc morbi nulla. Tortor congue sed et in.
+                  From the agriculturists cultivating the sustenance of nations to the educators shaping young minds with wisdom and care, <br> each hero carries a unique narrative of resilience, passion, and commitment. Explore the landscapes of science.
                 </p>
                 <button class="border-0 btn btn-primary bg-[#FF4240]">
                   Register Now!
@@ -298,9 +287,8 @@
         >
           <h6 class="font-extrabold text-4xl">Our New Products</h6>
           <p class="text-[#13131899] px-9">
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat <br />
-            dolor. Purus urna in sit nullam proin.
+            These unsung champions, with sleeves rolled up and hearts ablaze, navigate the challenges that define their chosen domains. <br> "Meet All the Heroes from the Field" invites you on a journey to discover the remarkable individuals who toil, innovate, and inspire within diverse fields of expertise.
+
           </p>
         </div>
         <!-- card container -->
@@ -463,9 +451,7 @@
         >
           <h6 class="font-extrabold text-4xl">Clients Question</h6>
           <p class="text-[#13131899] px-9">
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat <br />
-            dolor. Purus urna in sit nullam proin.
+          These unsung champions, with sleeves rolled up and hearts ablaze, navigate the challenges that define their chosen domains. <br> "Meet All the Heroes from the Field" invites you on a journey to discover the remarkable individuals who toil, innovate, and inspire within diverse fields of expertise.
           </p>
         </div>
         <div class="flex flex-col lg:flex-row gap-10 p-8">
@@ -534,9 +520,7 @@
         >
           <h6 class="font-extrabold text-4xl">Get In Touch</h6>
           <p class="text-[#13131899] px-9">
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat <br />
-            dolor. Purus urna in sit nullam proin.
+            These unsung champions, with sleeves rolled up and hearts ablaze, navigate the challenges that define their chosen domains. <br> "Meet All the Heroes from the Field" invites you on a journey to discover the remarkable individuals who toil, innovate, and inspire within diverse fields of expertise.
           </p>
         </div>
         <!-- contact container -->
@@ -640,8 +624,7 @@
       <div class="space-y-5 text-center  lg:text-left">
         <h3 class="text-white font-extrabold text-3xl">Get In Touch</h3>
         <p class="text-[#FFFFFF99]">
-          Dit amet consectetur. <br />Condimentum adipiscing aliquam turpis
-          placerat dolor. <br />Purus urna in sit nullam proin.
+          These unsung champions, with sleeves rolled up and hearts ablaze, navigate the challenges that define their chosen domains. <br> "Meet All the Heroes from the Field" invites you on a journey to discover the remarkable individuals who toil, innovate, and inspire within diverse fields of expertise.
         </p>
     
           <div class="flex items-center justify-center lg:justify-start gap-2 w-full  ">
