--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         <div class="navbar bg-base-100">
           <div class="navbar-start">
             <div class="dropdown">
-              <ul
-                tabindex="0"
-                class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52"
-              >
+              <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+              </div>
+              <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
                 <li><a>Home</a></li>
                 <li><a>About</a></li>
                 <li><a>Pages</a></li>
@@ -60,13 +60,14 @@
                 <li><a>Contact</a></li>
               </ul>
             </div>
+           
             <a class="btn btn-ghost text-xl font-extrabold"
-              >Hockey<span class="text-[#FF4240] font-extrabold">’</span>s</a
-            >
+            >Hockey<span class="text-[#FF4240] font-extrabold">’</span>s</a
+          >
           </div>
           <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-horizontal px-1">
-              <li class="text-red-600"><a>Home</a></li>
+              <li><a>Home</a></li>
               <li><a>About</a></li>
               <li><a>Pages</a></li>
               <li><a>Blog</a></li>
@@ -134,7 +135,10 @@
             Meet all the heroes from the field
           </h2>
           <p class="text-base text-[#ffffff99]">
-            In the vast tapestry of human endeavors, there exists a realm where heroes emerge not from the pages of comic books or the screens of blockbuster movies, but from the very fabric of our daily lives—the field
+            In the vast tapestry of human endeavors, there exists a realm where
+            heroes emerge not from the pages of comic books or the screens of
+            blockbuster movies, but from the very fabric of our daily lives—the
+            field
           </p>
         </div>
       </div>
@@ -147,7 +151,11 @@
         >
           <h6 class="font-extrabold text-4xl">Program Sections</h6>
           <p class="text-[#13131899] px-9">
-            These unsung champions, with sleeves rolled up and hearts ablaze, navigate the challenges that define their chosen domains. <br> "Meet All the Heroes from the Field" invites you on a journey to discover the remarkable individuals who toil, innovate, and inspire within diverse fields of expertise.
+            These unsung champions, with sleeves rolled up and hearts ablaze,
+            navigate the challenges that define their chosen domains. <br />
+            "Meet All the Heroes from the Field" invites you on a journey to
+            discover the remarkable individuals who toil, innovate, and inspire
+            within diverse fields of expertise.
           </p>
         </div>
         <div class="flex flex-col lg:flex-row">
@@ -220,7 +228,11 @@
         >
           <h6 class="font-extrabold text-4xl">Program Sections</h6>
           <p class="text-[#13131899] px-9">
-            These unsung champions, with sleeves rolled up and hearts ablaze, navigate the challenges that define their chosen domains. <br> "Meet All the Heroes from the Field" invites you on a journey to discover the remarkable individuals who toil, innovate, and inspire within diverse fields of expertise.
+            These unsung champions, with sleeves rolled up and hearts ablaze,
+            navigate the challenges that define their chosen domains. <br />
+            "Meet All the Heroes from the Field" invites you on a journey to
+            discover the remarkable individuals who toil, innovate, and inspire
+            within diverse fields of expertise.
           </p>
         </div>
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-12">
@@ -233,7 +245,11 @@
               <div class="lg:max-w-xl mx-w-md mt-24 ml-5 mb-5 mr-9 text-left">
                 <h1 class="mb-5 text-3xl font-bold">Junior Program</h1>
                 <p class="mb-5">
-                  From the agriculturists cultivating the sustenance of nations to the educators shaping young minds with wisdom and care, <br> each hero carries a unique narrative of resilience, passion, and commitment. Explore the landscapes of science.
+                  From the agriculturists cultivating the sustenance of nations
+                  to the educators shaping young minds with wisdom and care,
+                  <br />
+                  each hero carries a unique narrative of resilience, passion,
+                  and commitment. Explore the landscapes of science.
                 </p>
                 <button class="btn btn-primary border-0 bg-[#FF4240]">
                   Register Now!
@@ -250,7 +266,11 @@
               <div class="lg:max-w-xl mx-w-md mt-24 ml-5 mb-5 mr-9 text-left">
                 <h1 class="mb-5 text-3xl font-bold">Master Program</h1>
                 <p class="mb-5">
-                  From the agriculturists cultivating the sustenance of nations to the educators shaping young minds with wisdom and care, <br> each hero carries a unique narrative of resilience, passion, and commitment. Explore the landscapes of science.
+                  From the agriculturists cultivating the sustenance of nations
+                  to the educators shaping young minds with wisdom and care,
+                  <br />
+                  each hero carries a unique narrative of resilience, passion,
+                  and commitment. Explore the landscapes of science.
                 </p>
                 <button class="btn btn-primary border-0 bg-[#FF4240]">
                   Register Now!
@@ -270,7 +290,11 @@
               >
                 <h1 class="mb-5 text-3xl font-bold">Professional Program</h1>
                 <p class="mb-5">
-                  From the agriculturists cultivating the sustenance of nations to the educators shaping young minds with wisdom and care, <br> each hero carries a unique narrative of resilience, passion, and commitment. Explore the landscapes of science.
+                  From the agriculturists cultivating the sustenance of nations
+                  to the educators shaping young minds with wisdom and care,
+                  <br />
+                  each hero carries a unique narrative of resilience, passion,
+                  and commitment. Explore the landscapes of science.
                 </p>
                 <button class="border-0 btn btn-primary bg-[#FF4240]">
                   Register Now!
@@ -287,8 +311,11 @@
         >
           <h6 class="font-extrabold text-4xl">Our New Products</h6>
           <p class="text-[#13131899] px-9">
-            These unsung champions, with sleeves rolled up and hearts ablaze, navigate the challenges that define their chosen domains. <br> "Meet All the Heroes from the Field" invites you on a journey to discover the remarkable individuals who toil, innovate, and inspire within diverse fields of expertise.
-
+            These unsung champions, with sleeves rolled up and hearts ablaze,
+            navigate the challenges that define their chosen domains. <br />
+            "Meet All the Heroes from the Field" invites you on a journey to
+            discover the remarkable individuals who toil, innovate, and inspire
+            within diverse fields of expertise.
           </p>
         </div>
         <!-- card container -->
@@ -451,7 +478,11 @@
         >
           <h6 class="font-extrabold text-4xl">Clients Question</h6>
           <p class="text-[#13131899] px-9">
-          These unsung champions, with sleeves rolled up and hearts ablaze, navigate the challenges that define their chosen domains. <br> "Meet All the Heroes from the Field" invites you on a journey to discover the remarkable individuals who toil, innovate, and inspire within diverse fields of expertise.
+            These unsung champions, with sleeves rolled up and hearts ablaze,
+            navigate the challenges that define their chosen domains. <br />
+            "Meet All the Heroes from the Field" invites you on a journey to
+            discover the remarkable individuals who toil, innovate, and inspire
+            within diverse fields of expertise.
           </p>
         </div>
         <div class="flex flex-col lg:flex-row gap-10 p-8">
@@ -520,7 +551,11 @@
         >
           <h6 class="font-extrabold text-4xl">Get In Touch</h6>
           <p class="text-[#13131899] px-9">
-            These unsung champions, with sleeves rolled up and hearts ablaze, navigate the challenges that define their chosen domains. <br> "Meet All the Heroes from the Field" invites you on a journey to discover the remarkable individuals who toil, innovate, and inspire within diverse fields of expertise.
+            These unsung champions, with sleeves rolled up and hearts ablaze,
+            navigate the challenges that define their chosen domains. <br />
+            "Meet All the Heroes from the Field" invites you on a journey to
+            discover the remarkable individuals who toil, innovate, and inspire
+            within diverse fields of expertise.
           </p>
         </div>
         <!-- contact container -->
@@ -619,26 +654,32 @@
     <footer
       class="footer p-10 bg-[#131318] mt-24 grid grid-cols-1 lg:grid-cols-3"
     >
-    <!-- contact container -->
-     <div class="flex justify-center items-center w-full ">
-      <div class="space-y-5 text-center  lg:text-left">
-        <h3 class="text-white font-extrabold text-3xl">Get In Touch</h3>
-        <p class="text-[#FFFFFF99]">
-          These unsung champions, with sleeves rolled up and hearts ablaze, navigate the challenges that define their chosen domains. <br> "Meet All the Heroes from the Field" invites you on a journey to discover the remarkable individuals who toil, innovate, and inspire within diverse fields of expertise.
-        </p>
-    
-          <div class="flex items-center justify-center lg:justify-start gap-2 w-full  ">
+      <!-- contact container -->
+      <div class="flex justify-center items-center w-full">
+        <div class="space-y-5 text-center lg:text-left">
+          <h3 class="text-white font-extrabold text-3xl">Get In Touch</h3>
+          <p class="text-[#FFFFFF99]">
+            These unsung champions, with sleeves rolled up and hearts ablaze,
+            navigate the challenges that define their chosen domains. <br />
+            "Meet All the Heroes from the Field" invites you on a journey to
+            discover the remarkable individuals who toil, innovate, and inspire
+            within diverse fields of expertise.
+          </p>
+
+          <div
+            class="flex items-center justify-center lg:justify-start gap-2 w-full"
+          >
             <i class="fa-regular fa-envelope text-red-400"></i>
             <p class="text-[#FFFFFF99]">hockeys@support.com</p>
           </div>
-          <div class="flex items-center justify-center lg:justify-start gap-2 w-full">
+          <div
+            class="flex items-center justify-center lg:justify-start gap-2 w-full"
+          >
             <i class="fa-solid fa-phone text-red-400"></i>
             <p class="text-[#FFFFFF99]">(+62) 123-321-543</p>
           </div>
+        </div>
       </div>
-
-
-     </div>
       <div class="flex w-full justify-between">
         <nav class="text-white lg:text-left text-center">
           <header class="font-extrabold text-2xl mb-7">Company</header>
@@ -650,7 +691,7 @@
             <a class="link link-hover">Legal Notice</a>
           </div>
         </nav>
-        <nav class="text-white  lg:text-left text-center">
+        <nav class="text-white lg:text-left text-center">
           <header class="font-extrabold text-2xl text-center mb-7">
             Support
           </header>
@@ -667,7 +708,9 @@
           <header class="text-white font-extrabold text-2xl w-full mb-7">
             Services
           </header>
-          <div class="text-[#FFFFFF99] flex flex-col space-y-2 w-full  lg:text-left text-center">
+          <div
+            class="text-[#FFFFFF99] flex flex-col space-y-2 w-full lg:text-left text-center"
+          >
             <a class="link link-hover">Academy</a>
             <a class="link link-hover">Group Lesson</a>
             <a class="link link-hover">Private Lesson</a>
